# FutureUI

./: README.md
Apps/: README.md
Apps/Clocks/po/: es.po
Apps/DragonBoat/po/: es.po
Apps/Files/: .editorconfig  .git-blame-ignore-revs  .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
Apps/Files/.gitlab/: Dockerfile
Apps/Files/data/: dbus-interfaces.xml  dbus-interfaces2.xml  freedesktop-dbus-interfaces.xml  lineup-parameters  meson.build  nautilus-autorun-software.desktop.in  org.freedesktop.FileManager1.service.in  org.gnome.Nautilus.appdata.xml.in.in  org.gnome.Nautilus.desktop.in.in  org.gnome.Nautilus.search-provider.ini.in  org.gnome.Nautilus.service.in  org.gnome.nautilus.gschema.xml  shell-search-provider-dbus-interfaces.xml
Apps/Files/docs/: meson.build  nautilus-autorun-software.1  nautilus.1
Apps/Files/eel/: check-eel  check-program.c  eel-debug.c  eel-debug.h  eel-lib-self-check-functions.c  eel-lib-self-check-functions.h  eel-self-checks.c  eel-self-checks.h  eel-stock-dialogs.c  eel-stock-dialogs.h  eel-string.c  eel-string.h  eel-vfs-extensions.c  eel-vfs-extensions.h  meson.build
Apps/Files/extensions/: meson.build
Apps/Files/libnautilus-extension/: meson.build  nautilus-column-provider.c  nautilus-column-provider.h  nautilus-column.c  nautilus-column.h  nautilus-extension-private.h  nautilus-extension.h  nautilus-file-info.c  nautilus-file-info.h  nautilus-info-provider.c  nautilus-info-provider.h  nautilus-menu-item.c  nautilus-menu-provider.c  nautilus-menu-provider.h  nautilus-menu.c  nautilus-menu.h  nautilus-properties-item.c  nautilus-properties-item.h  nautilus-properties-model-provider.c  nautilus-properties-model-provider.h  nautilus-properties-model.c  nautilus-properties-model.h
Apps/Files/po/: LINGUAS  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  (+86 more)
Apps/Files/src/: check-nautilus  meson.build  nautilus-app-chooser.c  nautilus-app-chooser.h  nautilus-application.c  nautilus-application.h  nautilus-autorun-software.c  nautilus-batch-rename-dialog.c  nautilus-batch-rename-dialog.h  nautilus-batch-rename-utilities.c  nautilus-batch-rename-utilities.h  nautilus-bookmark-list.c  nautilus-bookmark-list.h  nautilus-bookmark.c  nautilus-bookmark.h  nautilus-clipboard.c  nautilus-clipboard.h  nautilus-column-chooser.c  nautilus-column-chooser.h  nautilus-column-utilities.c  nautilus-column-utilities.h  nautilus-compress-dialog-controller.c  nautilus-compress-dialog-controller.h  nautilus-dbus-launcher.c  nautilus-dbus-launcher.h  nautilus-dbus-manager.c  nautilus-dbus-manager.h  nautilus-debug.c  nautilus-debug.h  nautilus-directory-async.c  nautilus-directory-notify.h  nautilus-directory-private.h  nautilus-directory.c  nautilus-directory.h  nautilus-dnd.c  nautilus-dnd.h  nautilus-enum-types.c.template  nautilus-enum-types.h.template  nautilus-enums.h  nautilus-error-reporting.c  (+167 more)
Apps/Files/test/: meson.build
Apps/Firmware/: .clang-format  .clang-tidy  .gitlab-ci.yml  MAINTAINERS  README.md  RELEASE  gnome-firmware.doap  meson.build  meson_options.txt  meson_post_install.sh
Apps/Firmware/contrib/: build.sh  build_msys2.sh  debian_deps.sh  gnome-firmware.spec.in  org.gnome.Firmware.json
Apps/Firmware/data/: meson.build  org.gnome.Firmware.desktop.in
Apps/Firmware/data/appdata/: meson.build  org.gnome.Firmware.metainfo.xml.in
Apps/Firmware/data/icons/: meson.build
Apps/Firmware/po/: .gitignore  LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hr.po  id.po  it.po  ka.po  meson.build  nl.po  pa.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
Apps/Firmware/snap/: snapcraft.yaml
Apps/Firmware/src/: .gitignore  gfu-common.c  gfu-common.h  gfu-device-row.c  gfu-device-row.h  gfu-device-row.ui  gfu-main.c  gfu-main.ui  gfu-release-row.c  gfu-release-row.h  gfu-release-row.ui  gnome-firmware.gresource.xml  meson.build
Apps/Firmware/subprojects/: .gitignore  fwupd.wrap  gcab.wrap  libadwaita.wrap  libjcat.wrap  libxmlb.wrap
Apps/Settings/: .gitignore  .gitlab-ci.yml  .gitmodules  NEWS  README.md  gnome-control-center.doap  meson.build  meson_options.txt
Apps/Settings/docs/: CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  MAINTAINERS.md
Apps/Settings/man/: gnome-control-center.xml  meson.build
Apps/Settings/panels/: meson.build
Apps/Settings/po/: LINGUAS  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  (+71 more)
Apps/Settings/shell/: cc-log.c  (+30 more)
Apps/Shell/: .eslintrc.yml  .gitignore  .gitlab-ci.yml  .gitmodules  HACKING.md  NEWS  README.md  config.h.meson  gnome-shell.doap  meson.build  meson_options.txt
Apps/Usage/: .editorconfig  .gitlab-ci.yml  AUTHORS  NEWS  README.md  gnome-usage.doap  meson.build  meson_options.txt  org.gnome.Usage.json
Apps/Weather/: .editorconfig  .gitignore  .gitlab-ci.yml  COPYING.md  NEWS  README.md  gnome-weather.doap  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Weather.json
Documents/: FutureUI 设计规划.docx  FutureUI 软件开发规划.docx
UIcode/: AIassistantTEXT.predesigned.md  FutureUI Andes.pip  README.md
UImaterials/: README.md
UImaterials/Backgrounds/: README.md
UImaterials/Icons/: README.md
(+2042 files in other folders)
