if get_option('devel')
install_data('org.gnome.Firmware.Devel.svg',
             install_dir : 'share/icons/hicolor/scalable/apps',
             rename : 'org.gnome.Firmware.svg')
else
install_data('org.gnome.Firmware.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
endif
install_data('org.gnome.Firmware-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
